# WarehouseOrderManagement

./: Dockerfile  INSTALLATION.md  README.md  app.py  docker-compose.yml  init_db.py  models.py  pyproject.toml
templates/: index.html
